--- a/demo.html
+++ b/demo.html
@@ -32,7 +32,7 @@ node<!DOCTYPE html>
             </React.Fragment>
         )
     }
-
+    // Composing Components
     function Hellos()
     {
         return (
